# bareio

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  kernel.ld
core/: main.io
src/: bio-system.h  bio-types.h  main.c
src/arch/aarch64/: arch.cmake  start.S  system.c
stage0/: compiler.py  extract-builtin-message-tables.py  extract-structs.py
stage0/bareio/: parse_dwarfdump.py  parser.py  target.py  utils.py
stage0/bareio/llvm_dwarfdump/: __init__.py  parser.py
